@startuml

entity Benutzer {
    id
    name
    email
}

entity Gast {}
entity Mitarbeiter {}
entity Admin {}

Benutzer <|-- Gast
Benutzer <|-- Mitarbeiter
Benutzer <|-- Admin

entity Ticket {
    id
    preis
}

entity Tageskarte {}
entity Wochenkarte {}
entity Saisonkarte {}

Ticket <|-- Tageskarte
Ticket <|-- Wochenkarte
Ticket <|-- Saisonkarte

entity Piste {
    id
    name
    schwierigkeitsgrad
    laenge
}

entity SkiLift {
    id
    name
    typ
    kapazität
}

entity BenutzerPiste {
    benutzer_id
    piste_id
    zugriffszeitraum
}

entity PisteSkiLift {
    piste_id
    skilift_id
    zugriffszeitraum
}

Benutzer "n" -- "1" Ticket : besitzt >

PisteSkiLift "n" -- "1" Piste
PisteSkiLift "n" -- "1" SkiLift
BenutzerPiste "n" -- "1" Benutzer
BenutzerPiste "n" -- "1" Piste

@enduml
